some minor changes getting heroku up

--- a/public/survey.html
+++ b/public/survey.html
@@ -35,7 +35,7 @@
     <h3><strong>Question 1</strong></h3>
     <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q1">
 
         <option>1</option>
@@ -49,7 +49,7 @@
     <h3><strong>Question 2</strong></h3>
     <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q2">
 
         <option>1</option>
@@ -64,7 +64,7 @@
     <h3><strong>Question 3</strong></h3>
     <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q3">
 
         <option>1</option>
@@ -78,7 +78,7 @@
     <h3><strong>Question 4</strong></h3>
     <h4>You rarely do something just out of sheer curiosity.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q4">
 
         <option>1</option>
@@ -92,7 +92,7 @@
     <h3><strong>Question 5</strong></h3>
     <h4>People can rarely upset you.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q5">
 
         <option>1</option>
@@ -106,7 +106,7 @@
     <h3><strong>Question 6</strong></h3>
     <h4>It is often difficult for you to relate to other people’s feelings.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q6">
 
         <option>1</option>
@@ -120,7 +120,7 @@
     <h3><strong>Question 7</strong></h3>
     <h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q7">
 
         <option>1</option>
@@ -134,7 +134,7 @@
     <h3><strong>Question 8</strong></h3>
     <h4>You rarely get carried away by fantasies and ideas.</h4>
       <div class="form-group">
-    <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+    <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
     <select class="form-control" id="q8">
       <option>1</option>
       <option>2</option>
@@ -147,7 +147,7 @@
     <h3><strong>Question 9</strong></h3>
     <h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h4>
      <div class="form-group">
-    <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+    <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
     <select class="form-control" id="q9">
       <option>1</option>
       <option>2</option>
@@ -160,7 +160,7 @@
     <h3><strong>Question 10</strong></h3>
     <h4>You feel more energetic after spending time with a group of people.</h4>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree - 5 totaly agree.</label>
+      <label for="exampleFormControlSelect1">Select an answer from 1 totaly disagree 5 totaly agree.</label>
       <select class="form-control" id="q10">
 
         <option>1</option>
