--- a/public/survey.html
+++ b/public/survey.html
@@ -181,7 +181,7 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="/friendfinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/nathanw88/FriendFinder.git"">GitHub Repo</a></p>
       </div>
     </footer>
 
